libapache2-mod-chxj (0.8.3-1) unstable; urgency=high

  * Fixed Bug
    - The image conversion is not operated at the access by PC.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon,  4 Feb 2008 12:53:21 +0900

libapache2-mod-chxj (0.8.2-1) unstable; urgency=low

  * Fixed Bug to which compile error occurs when A is specified.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Sun,  3 Feb 2008 01:40:33 +0900

libapache2-mod-chxj (0.8.1-1) unstable; urgency=low

  * Changed for Apache 2.2.x.
  * Changed so that ``Configure'' might run well by CentOS5.1. 
  * Fixed bug that Segmentation Falt had occurred when browser inforamtion was 
    read in the AMD64 environment. 
  * Fixed bug that the HTML conversion operates when connecting it from PC. 
  * Fixed bug that the HTML conversion for jhtml.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900

libapache2-mod-chxj (0.8.0-1) unstable; urgency=low

  * add b tag.
  * add fieldset tag.
  * add cookie simulator.
  * To use neither SetOutputFilter nor SetInputFilter, it changes. 
  * add referer header simulator.
  * When '_ chxj_nc' parameter exists, the cookie is not renewed. 
  * The bug that the dynamic qrcode output function doesn't operate is corrected. 

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900

libapache2-mod-chxj (0.7.1-1) unstable; urgency=low

  * bug fix
      - it cannot correctly read the value when the backslash exists in the attribute.

 -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900

libapache2-mod-chxj (0.7.0-1) unstable; urgency=low

  * bug fix which the size before it converts it into Content-Length when HEAD of 
    the image conversion is requested is returned. 
  * change to acquire it even if the extension is attached by the image acquisition 
    request.
  * bug fix into which the submit value had not converted the character-code for HDML. 
  * bug fix #8585.
  * add user_agent rewrite function.